logs/dag_id=parking_pipeline/run_id=manual__2022-12-27T22_56_09.129157+00_00/task_id=create_table/attempt=1.log
[2022-12-27 22:56:11,016] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: parking_pipeline.create_table manual__2022-12-27T22:56:09.129157+00:00 [queued]>
[2022-12-27 22:56:11,025] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: parking_pipeline.create_table manual__2022-12-27T22:56:09.129157+00:00 [queued]>
[2022-12-27 22:56:11,026] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-12-27 22:56:11,026] {taskinstance.py:1357} INFO - Starting attempt 1 of 2
[2022-12-27 22:56:11,027] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-12-27 22:56:11,038] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-12-27 22:56:09.129157+00:00
[2022-12-27 22:56:11,043] {standard_task_runner.py:52} INFO - Started process 12491 to run task
[2022-12-27 22:56:11,049] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'parking_pipeline', 'create_table', 'manual__2022-12-27T22:56:09.129157+00:00', '--job-id', '701', '--raw', '--subdir', 'DAGS_FOLDER/parking_dag.py', '--cfg-path', '/tmp/tmp1vmq_2n4', '--error-file', '/tmp/tmp3u8kiw8f']
[2022-12-27 22:56:11,051] {standard_task_runner.py:80} INFO - Job 701: Subtask create_table
[2022-12-27 22:56:11,108] {task_command.py:369} INFO - Running <TaskInstance: parking_pipeline.create_table manual__2022-12-27T22:56:09.129157+00:00 [running]> on host 8fbeee8d3d5a
[2022-12-27 22:56:11,181] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Airflow
AIRFLOW_CTX_DAG_ID=parking_pipeline
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-27T22:56:09.129157+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-27T22:56:09.129157+00:00
[2022-12-27 22:56:11,196] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-12-27 22:56:11,204] {dbapi.py:208} INFO - Running statement: 
            drop table if exists parking_data;
            create table parking_data(
                parkingTransactionKey int not null,
                startDtm timestamptz not null,
                endDtm timestamptz not null,
                transactionAmt float not null,
                paymentTypeName text not null,
                transactionStatusCode text not null,
                maxHoursCnt float not null,
                meterTypeDsc text not null,
                dollarPerHourRate float not null,
                activeStatusInd bool not null,
                metroAreaName text not null,
            );
        , parameters: None
[2022-12-27 22:56:11,206] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 15:             );
                     ^

[2022-12-27 22:56:11,220] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=parking_pipeline, task_id=create_table, execution_date=20221227T225609, start_date=20221227T225611, end_date=20221227T225611
[2022-12-27 22:56:11,231] {standard_task_runner.py:97} ERROR - Failed to execute job 701 for task create_table (syntax error at or near ")"
LINE 15:             );
                     ^
; 12491)
[2022-12-27 22:56:11,264] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-12-27 22:56:11,305] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
